# AI-DevelopmentCourse

./: .gitignore  LICENSE  README.md
Loop-goal-demo/: README.md  goal_demo.py  loop_and_goal.py
MCP-demo/: .gitignore  README.md  mcp-architecture.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
MCP-demo/docs/: answers.md  knowledge-points.md  overview.md  questions.md  sse-mode.md  stdio-mode.md  stream-mode.md  testing.md
MCP-demo/src/common/: __init__.py  tools.py  tools.ts  types.py  types.ts
MCP-demo/src/sse/: __init__.py  client.py  client.ts  server.py  server.ts
MCP-demo/src/stdio/: __init__.py  client.py  client.ts  server.py  server.ts
MCP-demo/src/stream/: __init__.py  client.py  client.ts  server.py  server.ts
ai-security-demo/: .env.example  README.md  main.py  requirements.txt
autogpt-demo/: .env.example  .gitignore  README.md  main.py  requirements.txt
crewai-demo/: .env.example  README.md  main.py  pytest.ini  requirements.txt
langGraph-demo/: manifest.json  package.json
langchain-demo/: .env.example  .gitignore  README.md  main.py  requirements.txt
langgraph-adventure/: .gitignore  README.md  requirements.txt
llamaindex-demo/: .env.example  .gitignore  README.md  requirements.txt
loRA-demo/: Modelfile  generate_lora_pptx.py  lora_demo.py  lora_finetuning_guide.md  merge_for_deploy.py  requirements.txt  serve.py  test_deploy_guide.md
milvus-demo/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
multi-agent-demo/: .env.example  README.md  main.py  requirements.txt
(+203 files in other folders)
